Use number type for BIN, unify the api naming.
